# tern

./: .gitignore  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  biome.json  deny.toml  package.json  rust-toolchain.toml  rustfmt.toml
.claude/: launch.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bench.yml  build.yml  ci.yml  dco.yml  deny.yml
apps/desktop/: Cargo.toml  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: auth.rs  commands.rs  jump.rs  lib.rs  main.rs  reconnect.rs  session_cfg.rs  store_commands.rs
crates/core-pty/: Cargo.toml
crates/core-pty/src/: lib.rs
crates/core-pty/tests/: smoke.rs
crates/core-serial/: Cargo.toml
crates/core-serial/src/: lib.rs
crates/core-sftp/: Cargo.toml
crates/core-sftp/src/: lib.rs
crates/core-ssh/: Cargo.toml
crates/core-ssh/examples/: bench_sink.rs  shell.rs
crates/core-ssh/src/: config.rs  error.rs  keys.rs  known_hosts.rs  lib.rs  session.rs
crates/core-ssh/tests/: keys.rs  known_hosts.rs  rig.rs
crates/core-ssh/tests/fixtures/known_hosts/: hashed  key_a.pub  key_b.pub  key_rsa.pub  plain
crates/core-store/: Cargo.toml
crates/core-store/migrations/: 0001_init.sql  0002_auth_fallbacks.sql  0003_snippets.sql  0004_forward_agent.sql
crates/core-store/src/: db.rs  error.rs  folders.rs  hosts.rs  lib.rs  migrate.rs  model.rs  settings.rs  snippets.rs  tags.rs
crates/core-store/src/ssh_config/: lex.rs  mod.rs  parse.rs
crates/core-store/tests/: migrations.rs  repos.rs  ssh_config.rs
crates/core-store/tests/fixtures/ssh_config/: basic  cycle_a  cycle_b  with_include  with_match
crates/core-store/tests/fixtures/ssh_config/conf.d/: extra.conf
crates/core-store/tests/golden/: schema.sql
crates/core-vault/: Cargo.toml
crates/core-vault/src/: lib.rs  os_keyring.rs
crates/core-vault/tests/: keyring_roundtrip.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs  store.rs
crates/term-stream/: Cargo.toml
crates/term-stream/src/: lib.rs
docker/: compose.yml
docker/dropbear/: Dockerfile  entrypoint.sh
docker/openssh/: Dockerfile  entrypoint.sh  sshd_config  sshd_config.nopassword
docs/: dev-plan.md  linux-support.md  signing-checklist.md
docs/adr/: 0001-license-apache-2.0.md  0002-name-tern-identifier.md  0003-ssh-protocol-russh.md  0004-sftp-russh-sftp.md  0005-terminal-render-xterm-webgl.md  0006-local-pty-portable-pty.md  0007-serial-serialport-rs.md  0008-secrets-keyring-vault.md  0009-local-storage-rusqlite.md  0010-frontend-react-vite-zustand.md  0011-ipc-transport-tauri-channel.md  0012-local-store-crate.md  0013-known-hosts-own-file.md  0014-ui-liltui-vendored.md  0015-ssh-config-import.md  0016-terminal-pool-and-tabs.md  0017-ui-layout-smoke-test-playwright.md  0018-auth-chain-and-single-credential.md  0019-reconnect-supervisor.md  0020-split-panes-pane-tree.md  0021-agent-forwarding-bridge.md  template.md
docs/bench/: phase0-results.md
docs/bench/results/: b64urandom-c128k-w512k.json  cat100mb-c128k-w512k.json  cat100mb-c256k-w512k.json  cat100mb-c64k-w512k.json  core.json  echo-c128k-w512k.json  echo-c256k-w512k.json  echo-c64k-w512k.json  findroot-c128k-w512k.json  headless.json  seq2m-c128k-w512k.json  seq2m-c256k-w512k.json  seq2m-c64k-w512k.json  yes10s-c128k-w512k.json
scripts/: bench-ci.sh  bench-report.mjs  bench-xterm-headless.mjs  gen-key-fixtures.sh  sshd-rig.sh
ui/: components.json  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
ui/e2e/: shell.spec.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/bench/: BenchApp.tsx
ui/src/commands/: hosts.ts  keymap.test.ts  keymap.ts  registry.test.ts  registry.ts  snippets.ts  tabs.ts  types.ts
ui/src/components/: AppearanceDialog.tsx  CommandPalette.tsx  HostKeyDialog.tsx  HostNewDialog.tsx  HostPalette.tsx  HostSidebar.test.ts  HostSidebar.tsx  PasteWarningDialog.tsx  SessionStatus.tsx  SessionTabs.tsx  SnippetRunDialog.tsx  SnippetsDialog.tsx  SshConfigImport.tsx  TerminalMount.tsx  TerminalSearch.tsx  TerminalView.tsx
ui/src/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  button.tsx  checkbox.tsx  collapsible.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  empty-state.tsx  field.tsx  icons.tsx  input.tsx  kbd.tsx  label.tsx  popover.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  skeleton.tsx  spinner.tsx  switch.tsx  tabs.tsx  textarea.tsx  toast.tsx  tooltip.tsx  tree.tsx
ui/src/lib/: appearance.ts  auth-chain.test.ts  auth-chain.ts  bench.ts  hosts-ipc.ts  ipc.test.ts  ipc.ts  shortcuts.test.ts  shortcuts.ts  snippets-ipc.ts  substitute.test.ts  substitute.ts  tree.ts
ui/src/session/: controller.test.ts  controller.ts
ui/src/store/: layout.test.ts  layout.ts  session.ts  sessions.test.ts  sessions.ts
ui/src/terminal/: clipboard.test.ts  clipboard.ts  pool.ts  theme.ts
ui/src/test/: setup.ts  tauri-mock.ts
