[package]
name = "tern-core-pty"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Local shells via portable-pty (ConPTY on Windows)"

[dependencies]
bytes.workspace = true
portable-pty = "0.9.0"
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
