[package]
name = "tern-core-serial"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Serial consoles via serialport-rs + minimal telnet (Phase 4)"

[dependencies]

[lints]
workspace = true
