[package]
name = "tern-core-sftp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "SFTP wrapper and transfer-queue engine (Phase 3)"

[dependencies]

[lints]
workspace = true
