[package]
name = "tern-core-ssh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "russh session management: connect, auth, channels, PTY, keepalives"

[dependencies]

[lints]
workspace = true
