[package]
name = "tern-core-vault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Secret storage: OS keyring wrapper + vault crypto (Phase 5; keyring spike in Phase 0)"

[dependencies]
keyring = "4"
thiserror.workspace = true
zeroize.workspace = true

[lints]
workspace = true
