[package]
name = "tern-term-stream"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Terminal output coalescing, flow control, and stream stats shared by the SSH and local-PTY paths"

[dependencies]

[lints]
workspace = true
